canry_deployment/deployment_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: omprakash4pt/flask-app:augni
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.83.128
  ports:
  - port: 8555
    targetPort: 80
    name: http
  selector:
    app: flask
